@startuml
'https://plantuml.com/class-diagram
hide circle
class DeviceRepository <<interface>>


class Device{
    -macAddress
    -name
    -description
}
class DeviceController{
    delete( WebRequest request, String macAddress):ResponseEntity<DeviceView>
    }
class DeviceService{
 +deleteDevice(String macAddress, long desiredVersion): int

}

interface DeviceRepository
{
+deleteByIdIfMatches(Long deviceId, long desiredVersion): int
}


DeviceController ..> DeviceService: uses >
DeviceService ..> DeviceRepository: uses >
DeviceRepository ..> Device: < record
@enduml
